fixt overflow in list of breeds

--- a/src/features/dog-list/components/DogList.css
+++ b/src/features/dog-list/components/DogList.css
@@ -5,7 +5,7 @@ div.wrapper {
       list-style: none;  
       display: flex; 
       flex-wrap: wrap;  
-      flex-direction: column; 
+      flex-direction: row; 
       max-height: 600px;
     }
 .wrapper li { 
